--- a/3-column-card-component/style.css
+++ b/3-column-card-component/style.css
@@ -5,9 +5,9 @@
     --sedan: hsl(31, 77%, 52%);
     --suv: hsl(184, 100%, 22%);
     --luxury: hsl(179, 100%, 13%);
-
-
 }
+
+ /*test test test*/
 
 body{
     display: flex;
