--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-    border-radius: 0.6rem;
+    border-radius: 0.3rem; /*0.6*/
     display: flex;
     flex-direction: column;
     align-items: center;
