--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -17,10 +17,9 @@ body {
 }
 
 main {
-    border-radius: 0.3rem; /*0.6*/
+    border-radius: 0.6rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     overflow: hidden;
 }
 
@@ -32,7 +31,7 @@ p.name {
     font-size: 0.8rem;
     letter-spacing: 0.2rem;
     margin-block: 1.6rem 0rem;
-    margin-inline: 1.5rem; 
+    margin-inline: 1.5rem 0; 
     color: var(--description);
 }
 
@@ -53,7 +52,7 @@ p.descr {
     color: var(--description);
 }
 .price {
-    margin-inline: 1.6rem;
+    margin-inline: 2rem;
     margin-block: 0;
     display: flex;
     justify-content: flex-start;
@@ -71,36 +70,41 @@ p.descr {
     text-decoration: line-through;
     font-size: 0.8rem;
     color: var(--description);
+    margin-left: 1.6rem;
 }
 
 button.btn {
     background-color: var(--add);
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border: none;
     height: 3rem;
-    width: 19.7rem;
+    width: auto;
+    margin-inline: 1.5rem;
     border-radius: 0.5rem;
     margin-block: 2rem;
+    font-family: 'montserrat', serif;
+    font-weight: 600;
+    font-size: 0.9rem;
 }
 
 @media (max-width: 700px) {
     
 body {
     display: flex;
-    align-items: center;
-    justify-content: center;
     flex-direction: column;
 }
 main {
-    width: 95%;
+    width: 95.5%;
     height: auto;
     background-color: var(--bg2);
     margin-inline: auto;
 }
 
 picture .img {
-    display: block;
     width: 100%;
-    margin-inline: auto;
 }
 
 }
