--- a/product-preview-card-component-main/style.css
+++ b/product-preview-card-component-main/style.css
@@ -1,17 +1,17 @@
 :root{
     font-size: 15px;
     --add:hsl(158, 36%, 37%); /*button - Dark cyan*/
-    --backgroung: hsl(30, 38%, 92%); /*cream*/
+    --backgroung: hsl(30, 38%, 92%); /*body backgroung - cream*/
     --add2:hsl(156, 42%, 18%); /*button hover - Very dark blue*/
-    --description: hsl(228, 12%, 48%);/*Dark grayish blue*/
-    --bg2: hsl(0, 0%, 100%); /*backgroung - White*/
+    --description: hsl(228, 12%, 48%);/*description - Dark grayish blue*/
+    --bodybg: hsl(0, 0%, 100%); /*componeent background- White*/
 
-    /*font-family: 'Fraunces', serif;*/
-    /*font-family: 'Montserrat', serif;*/
-
+    /*font-family: 'Fraunces', serif; - weight 700*/
+    /*font-family: 'Montserrat', serif; -weight 500, 700*/
 }
 body {
     min-height: 100vh;
+    margin: 0;
     background-color: var(--backgroung);
     display: flex;
     align-items: center;
@@ -21,7 +21,7 @@ body {
 
 .item {
     display: flex;
-    background-color: var(--bg2);
+    background-color: var(--bodybg);
     height: 30rem;
     width: 40rem;
     border-radius: 0.6rem;
@@ -43,9 +43,9 @@ h1.name {
     font-weight: 500;
     text-transform: uppercase;
     font-size: 0.8rem;
-    letter-spacing: 0.3rem;
+    letter-spacing: 0.33rem;
     margin-block: 2.1rem 0rem;
-    margin-left: 2rem; 
+    margin-inline: 2rem ; 
     color: var(--description);
 }
 
@@ -58,7 +58,7 @@ h2.title {
     line-height: 2.2rem;
 }
 
-p.descr {
+p.description {
     font-family: 'Montserrat', serif;
     font-size: 0.93rem;
     margin-inline: 2rem;
@@ -90,7 +90,7 @@ p.descr {
 
 button.btn {
     background-color: var(--add);
-    color: var(--bg2);
+    color: var(--bodybg);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -99,9 +99,9 @@ button.btn {
     width: 15.8rem;
     margin-inline: 2.1rem;
     border-radius: 0.5rem;
-    margin-block: 1.48rem;
+    margin-block: 1.4rem;
     font-family: 'montserrat', serif;
-    font-weight: 600;
+    font-weight: 700;
     font-size: 0.9rem;
 }
 
@@ -115,6 +115,14 @@ button.btn:hover {
     margin-right: 0.8rem;
 }
 
+.attribution { 
+    font-size: 0.8rem;
+    margin-top: 1em;
+}
+.attribution a { 
+    color: hsl(228, 45%, 44%);
+}
+
 @media (max-width: 700px) {
     
 body {
@@ -124,7 +132,7 @@ body {
 .item {
     flex-direction: column;
     min-height: 40.73rem;
-    width: 95.5%;
+    width: 91.3%;
     height: auto;
     margin-block: 1.5rem;
 }
@@ -133,10 +141,13 @@ main {
     width: auto;
 }
 
+picture .img {
+    width: 100%;
+}
 
 h1.name {
     margin-block: 1.35rem 0rem;
-    margin-left: 1.6rem; 
+    margin-inline: 1.56rem; 
 }
 
 h2.title {
@@ -144,7 +155,7 @@ h2.title {
     margin-inline: 1.6rem;
 }
 
-p.descr {
+p.description {
     margin-inline: 1.57rem 1.7rem;
     margin-block: 1rem 0;
 }
@@ -156,17 +167,7 @@ p.descr {
 
 button.btn {
     margin-block: 0.7rem 1rem;
-    width: 19.8rem;
+    width: 19.6rem;
     margin-inline: auto;
 }
-
-picture .img {
-    width: 100%;
-}
-
-button .btn {
-    max-width: 19.6rem;
-    margin-inline: 1.5rem;
-}
-
 }
