--- a/nft-preview-card-component-main/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/nft-preview-card-component-main/style.css
@@ -1,7 +1,7 @@
 :root{
     --main-background: hsl(217,54%,11%); /**/
     --card-background: hsl(216, 50%, 16%); /**/
-    --line: hsl hsl(215, 32%, 27%); /**/
+    --borderAvatar: hsla(215, 52%, 70%, 0.122); /**/
     --white: hsl(0, 0%, 100%); /**/
 
     --paragraph: hsl(215, 51%, 70%); /**/
@@ -31,10 +31,9 @@ main {
 
 }
 
-img {
+.img {
     width: 100%;
     border-radius: 0.5rem;
-    
 }
 
 header h2 {
@@ -42,6 +41,7 @@ header h2 {
     color: var(--white);
     font-weight: 600;
 }
+
 header h2 :active,
 :visited,
 :link{
@@ -49,12 +49,7 @@ header h2 :active,
     text-decoration: none;
 }
 
-header h2 :hover{
-    color: var(--eht);
-    text-decoration: none;
-}
-
-p.dscr {
+.dscr {
     color: var(--paragraph);
     font-size: 1.2rem;
     font-weight: 300;
@@ -62,17 +57,18 @@ p.dscr {
     line-height: 1.7rem;
 }
 
-section.info {
+.info {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-block: 0.25rem;
+    margin-block: 0.25rem 0.5rem;
 }
 
 .price {
     color: var(--eht);
     font-weight: 400;
     font-size: 1.1rem;
+    margin-top: 0.2rem;
 }
 
 .price :before {
@@ -105,14 +101,38 @@ section.info {
     display: flex;
     justify-content: flex-start;
     align-items: center;
+    font-size: 1.09rem;
     border-top: 1px solid ;
-    border-color: hsl(215, 51%, 70%);
+    border-color: var(--borderAvatar);
+}
+
+.avatar p {
+    margin-top: 1.2rem;
+}
+
+.avatar img {
+    vertical-align: middle;
+    height: 2.1rem;
+    border: 1px solid;
+    border-color: var(--white);
+    border-radius: 50%;
+    margin-right: 1rem;
+  }
+
+.avatar {
+    color: var(--paragraph);
+}
+
+
+
+a:hover {
+    color: var(--eht);
 }
 
 /*footer*/
 .attribution { 
     font-size: 11px; text-align: center;
     margin-top: 2rem;
+    color: var(--paragraph);
 }
 .attribution a { color: hsl(228, 45%, 44%); }
-
