--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -6,9 +6,10 @@
 
     --paragraph: hsl(215, 51%, 70%);
     --hover-color: hsl(178, 100%, 50%); 
+    --hover-img: hsla(178, 100%, 50%, 0.401); 
     --footer: hsl(228, 45%, 44%); 
     font-size: 15px;
-    font-family: 'Outfit', sans-serif; /* Weights: 300, 400, 600 */
+     /* Weights: 300, 400, 600 */
 }
 a:visited,:active,:link {
     text-decoration: none;
@@ -17,6 +18,11 @@ a:visited,:active,:link {
 a:hover {
     color: var(--hover-color);
 }
+
+p {
+    margin: 0;
+}
+
 body {
     min-height: 100vh;
     display: flex;
@@ -35,11 +41,46 @@ main {
     border-radius: 1rem;
     box-sizing: border-box;
     padding: 1.6rem;
+    font-family: 'Outfit', sans-serif;
+}
+
+.HoverImage {
+    position: relative;
+    width: 100%;
+    border-radius: 0.6rem;
+    overflow: hidden;
 }
 
 .NFT-img {
     width: 100%;
-    border-radius: 0.6rem;
+    height: auto;
+    display: block;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .3s ease;
+    background-color: var(--hover-img);
+}
+
+.HoverImage:hover .overlay {
+    opacity: 1;
+}
+
+.icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+
 }
 
 .title {
@@ -64,26 +105,53 @@ main {
 .price {
     font-size: 1.1rem;
     font-weight: 400;
-    margin-block: 1.65rem;
+    margin-block: 1.65rem 1.6rem;  /* margines dolny do zmiany, wraz z time left*/ 
     color: var(--hover-color);
 }
 
+.price :before {
+    content: "";
+    background-image: url(images/icon-ethereum.svg);
+    background-repeat: no-repeat;
+    width: 0.8rem;
+    height: 1.2rem;
+    margin: 0.1rem 0.3rem 0 0;
+    float: left;
+}
+
 .time-left {
-    background-color: red;
+    margin-block: 1.65rem 1.6rem;
+    font-size: 1.1rem;
+    color: var(--paragraph);
+}
+
+.time-left :before {
+    content: "";
+    background-image: url(images/icon-clock.svg);
+    background-repeat: no-repeat;
+    float: left;
+    margin: 0.2rem 0.3rem 0 0;
+    width: 1.2rem;
+    height: 1.2rem;
+}
+
+.avatar {
+    display: flex;
+    align-items: center;
+    margin-top: 0.9rem;
+    color: var(--paragraph);
 }
 
 
-/* .price :before {
-    content: "";
-    background: url("images/icon-ethereum.svg") no-repeat;
-    width: 1rem;
-    height: 1.2rem;
-    margin-right: 0.2rem;
-    margin-top: 0.1rem;
-    float: left;
-    display: block;
-} */
 
+.Avatar-Img {
+    height: 2.2rem;
+    width: 2.2rem;
+    margin-right: 1rem;
+    border: 1px solid;
+    border-radius: 50%;
+    border-color: var(--white);
+}
 
 /*footer*/
 .attribution { 
