--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -1,13 +1,17 @@
 :root{
+    /* color main */
     --main-background: hsl(217,54%,11%); 
     --component-background: hsl(216, 50%, 16%); 
     --borderline: hsla(215, 52%, 70%, 0.122);
     --white: hsl(0, 0%, 100%); 
-
+    /* color other */
     --paragraph: hsl(215, 51%, 70%);
     --hover-color: hsl(178, 100%, 50%); 
     --hover-img: hsla(178, 100%, 50%, 0.401); 
     --footer: hsl(228, 45%, 44%); 
+
+    /* font */
+    font-family: 'Outfit', sans-serif;
     font-size: 15px;
      /* Weights: 300, 400, 600 */
 }
@@ -15,8 +19,13 @@ a:visited,:active,:link {
     text-decoration: none;
     color: rgb(252, 251, 251);
 }
+
+a {
+    transition: 0.1s ease-in-out;
+}
 a:hover {
     color: var(--hover-color);
+    
 }
 
 p {
@@ -41,19 +50,18 @@ main {
     border-radius: 1rem;
     box-sizing: border-box;
     padding: 1.6rem;
-    font-family: 'Outfit', sans-serif;
+    
 }
 
 .HoverImage {
     position: relative;
     width: 100%;
-    border-radius: 0.6rem;
+    border-radius: 0.5rem;
     overflow: hidden;
 }
 
 .NFT-img {
     width: 100%;
-    height: auto;
     display: block;
 }
 
@@ -63,10 +71,9 @@ main {
     bottom: 0;
     left: 0;
     right: 0;
-    height: 100%;
     width: 100%;
     opacity: 0;
-    transition: .3s ease;
+    transition: 0.2s ease-in;
     background-color: var(--hover-img);
 }
 
@@ -75,17 +82,23 @@ main {
 }
 
 .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+
+/* .icon {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-
-}
+} */
 
 .title {
     font-size: 1.5rem;
-    margin-block: 1.35rem 0;
+    margin-block: 1.65rem 0;
 }
 
 .descr {
@@ -142,8 +155,6 @@ main {
     color: var(--paragraph);
 }
 
-
-
 .Avatar-Img {
     height: 2.2rem;
     width: 2.2rem;
@@ -160,3 +171,38 @@ main {
     color: var(--paragraph);
 }
 .attribution a { color: hsl(228, 45%, 44%); }
+
+
+@media only screen and (max-width: 500px) {
+
+    body {
+        max-height: 100vh;
+    }
+
+    main {
+        width: 87%;
+        height: auto;
+        padding-bottom: 0;
+    }
+
+    .descr {
+        font-size: 1.1rem;
+        line-height: 1.7rem;
+        margin-block: 0.65rem 0;
+    }
+
+    .price,.time-left {
+        margin-block: 1.1rem 0.9rem;
+        font-size: 1rem;
+    }
+
+    .avatar {
+        margin-block: 1.1rem 1.4rem;
+        font-size: 1.03rem;
+    }
+
+    .Avatar-Img {
+        height: 2rem;
+        width: 2rem;
+    }
+}
