--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -3,6 +3,7 @@
     --main-background: hsl(217,54%,11%); 
     --component-background: hsl(216, 50%, 16%); 
 
+    --shadow-color-box: hsl(216, 68%, 7%); 
     --borderline: hsla(215, 52%, 70%, 0.122);
     --white: hsl(0, 0%, 100%); 
     --paragraph: hsl(215, 51%, 70%);
@@ -21,11 +22,10 @@ a:visited,:active,:link {
 }
 
 a {
-    transition: 0.1s ease-in-out;
+    transition: 0.2s ease-in-out;
 }
 a:hover {
     color: var(--hover-color);
-    
 }
 
 p {
@@ -50,7 +50,9 @@ main {
     border-radius: 1rem;
     box-sizing: border-box;
     padding: 1.6rem;
-    
+    -webkit-box-shadow: 0px 0px 17px 6px var(--shadow-color-box);
+    -moz-box-shadow: 0px 0px 17px 6px var(--shadow-color-box);
+    box-shadow: 0px 4px 22px 4px var(--shadow-color-box);
 }
 
 .ProductImage {
@@ -94,10 +96,11 @@ main {
 }
 
 .descr {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     font-weight: 300;
     color: var(--paragraph);
     margin-block: 1.1rem 0;
+    line-height: 1.7rem;
 }
 
 .info {
@@ -107,10 +110,10 @@ main {
     border-color: var(--borderline);
 }
 
-.price {
+.price{
     font-size: 1.1rem;
     font-weight: 400;
-    margin-block: 1.65rem 1.6rem;
+    margin-block: 1.6rem 1.6rem;
     color: var(--hover-color);
 }
 
@@ -125,7 +128,7 @@ main {
 }
 
 .time-left {
-    margin-block: 1.65rem 1.6rem;
+    margin-block: 1.6rem 0;
     font-size: 1.1rem;
     font-weight: 400;
     color: var(--paragraph);
@@ -136,7 +139,7 @@ main {
     background-image: url(images/icon-clock.svg);
     background-repeat: no-repeat;
     float: left;
-    margin: 0.2rem 0.3rem 0 0;
+    margin: 0.1rem 0.3rem 0 0;
     width: 1.2rem;
     height: 1.2rem;
 }
@@ -144,17 +147,23 @@ main {
 .avatar {
     display: flex;
     align-items: center;
-    margin-top: 0.9rem;
+    font-size: 1.1rem;
     color: var(--paragraph);
+    margin-block: 0.3rem 1rem;
 }
 
 .Avatar-Img {
-    height: 2.2rem;
-    width: 2.2rem;
+    height: 2.1rem;
+    width: 2.1rem;
+    margin-block: 0.75rem 0;
     margin-right: 1rem;
     border: 1px solid;
     border-radius: 50%;
     border-color: var(--white);
+}
+
+.avatar p {
+    margin-block: 0.4rem 0rem;
 }
 
 /*footer*/
@@ -166,7 +175,7 @@ main {
 .attribution a { color: hsl(228, 45%, 44%); } */
 
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 700px) {
 
     main {
         width: 87%;
@@ -187,12 +196,10 @@ main {
     }
 
     .avatar {
-        margin-block: 1.1rem 1.4rem;
         font-size: 1.03rem;
     }
 
     .Avatar-Img {
-        height: 2rem;
-        width: 2rem;
+        margin-block: 0.75rem 0.35rem;
     }
 }
