--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -107,7 +107,7 @@ main {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid;
-    border-color: var(--borderline);
+    border-color: var(--border-color-line);
 }
 
 .price{
