--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -29,7 +29,7 @@ a:hover {
     color: var(--hover-color);
 }
 
-p,h4 {
+p,h1,h2 {
     margin: 0;
 }
 
@@ -111,7 +111,7 @@ main {
     border-color: var(--border-color-line);
 }
 
-.price h4 {
+.price h1 {
     font-size: 1.1rem;
     font-weight: 400;
     margin-block: 1.55rem 1.6rem;
@@ -128,7 +128,7 @@ main {
     float: left;
 }
 
-.time-left h3 {
+.time-left h2 {
     margin-block: 1.55rem 0;
     font-size: 1.1rem;
     font-weight: 400;
@@ -197,8 +197,8 @@ main {
         margin-block: 0.65rem 0;
     }
 
-    .price h4,.time-left h3 {
-        margin-block: 1.1rem 0.9rem;
+    .price h1,.time-left h2 {
+        margin-block: 1.2rem 0.9rem;
         font-size: 1rem;
     }
 
