--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -107,17 +107,24 @@ main {
     background-color: var(--white);
     color: var(--orange);
     cursor: pointer;
-    
 }
+
+.disable-remove {
+    background-color: var(--lightgray);
+    cursor: auto;
+    color: var(--white);
+}
+/* .submit-btn:disabled
+ {
+    background-color: var(--lightgray);
+    color: black;
+    cursor: auto;
+} */
 
 .after-submit {
     display: flex ;
     flex-direction: column;
     align-items: center;
-}
-
-.display-none {
-    display: none;
 }
 
 .after-submit img {
@@ -137,6 +144,10 @@ main {
     font-size: 1.9rem;
     font-weight: 400;
     margin-top: 2.4rem;
+}
+
+.display-none {
+    display: none;
 }
 
 .thanks {
@@ -164,4 +175,38 @@ footer a:hover {
     color: hsl(134, 52%, 46%); 
     text-decoration: none;
 } */
+/* prawie wszystko do zmiany */
+@media only screen and (max-width: 750px){
+    main {
+        width: 71%;
+        height: auto;
+        border-radius: 1rem;
+        padding: 1.4rem;
+    }
 
+    .shape-img {
+        height: 2.6rem;
+        width: 2.6rem;
+    }
+
+    .shape {
+        height: 2.7rem;
+        width: 2.7rem;
+        font-size: .9rem;
+    }
+
+    .before-submit h1 {
+        font-size: 1.5rem;
+        margin-top: 1.5rem;
+    }
+
+    .description {
+        margin-top: .4rem;
+        font-size: .9rem;
+    }
+
+    .submit-btn {
+        margin-top: 1.7rem;
+        margin-bottom: .8rem;
+    }
+}
