--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -19,7 +19,6 @@
 a:visited,:active,:link {
     text-decoration: none;
     color: var(--white);
-  
 }
 
 a {
@@ -52,6 +51,7 @@ main {
     border-radius: 1rem;
     box-sizing: border-box;
     padding: 1.6rem;
+    margin-top: 2rem;
     -webkit-box-shadow: 0px 0px 17px 6px var(--shadow-color-box);
     -moz-box-shadow: 0px 0px 17px 6px var(--shadow-color-box);
     box-shadow: 0px 4px 22px 4px var(--shadow-color-box);
@@ -149,7 +149,6 @@ main {
 .avatar {
     display: flex;
     align-items: center;
-    
     color: var(--paragraph);
     margin-block: 0.3rem 1rem;
 }
@@ -179,7 +178,13 @@ main {
 .attribution a { color: hsl(228, 45%, 44%); 
 }
 
-.attribution a:hover { color: hsl(338, 80%, 50%); 
+.attribution a:hover { 
+    color: hsl(338, 80%, 50%); 
+}
+
+.attribution a:focus { 
+    color: hsl(53, 92%, 45%); 
+    
 }
 
 @media only screen and (max-width: 750px) {
