--- a/interactive-rating-component-main/style.css
+++ b/interactive-rating-component-main/style.css
@@ -8,8 +8,9 @@
     --mainbg: rgb(20,21,25); /*main bg color*/
     --ratingelement: rgb(38,47,56); /*circle element color*/
     --orange: rgb(251, 116, 19); /*button, ratting element hover*/
-    --font1: font-family: 'Overpass', sans-serif; /*400, 700*/
+    font-family: 'Overpass', sans-serif; /*400, 700*/
 }
+
 p,h1,h2,body {
     margin: 0;
 }
@@ -21,18 +22,18 @@ body {
     justify-content: center;
     align-items: center;
     background-color:var(--mainbg);
-    font-family: 'Overpass', sans-serif;
 }
-
 
 main {
     width: 23.3rem;
     min-height: 23.6rem;
     padding: 2.1rem;
+    margin-block: 2rem;
     background-color: var(--element);
     border-radius: 2rem;
 }
 
+/* first section - before submit */
 .shape-img {
     display: flex;
     justify-content: center;
@@ -54,7 +55,7 @@ main {
     color: var(--pharagpraph);
     font-size: 1rem;
     line-height: 1.6rem;
-    margin-block: 0.55rem 0;
+    margin-block: .55rem 0;
 }
 
 .rating-box {
@@ -87,6 +88,9 @@ main {
     color: var(--white);
 }
 
+.disabled-btn{
+    background-color: var(--mainbg);
+}
 .submit-btn {
     width: 100%;
     height: 3rem;
@@ -99,7 +103,7 @@ main {
     font-weight: 400;
     text-transform: uppercase;
     font-size: 1rem;
-    letter-spacing: 0.15rem;
+    letter-spacing: .15rem;
     transition: ease-in-out .15s;
 }
 
@@ -126,13 +130,12 @@ main {
     display: flex ;
     flex-direction: column;
     align-items: center;
-    font-family: var(--font1);
     width: 100%;
 }
 
 .after-submit img {
     margin-top: .9rem;
-    /* height: 7.5rem; */
+    height: 7.3rem;
 }
 
 .points-selected {
@@ -157,19 +160,18 @@ main {
     text-align: center;
     margin-block: 0.6rem 0;
     line-height: 1.6rem;
-    margin-inline: 0.3rem;
+    margin-inline: .3rem;
 }
 
 .display-none {
     display: none;
 }
 
-
-
 /* footer */
 footer { 
-    font-size: 11px; text-align: center;
-    margin: 1rem;
+    font-size: .7rem; 
+    text-align: center;
+    margin-bottom: 1rem;
     color: var(--lightgray);
  }
 footer a {
@@ -181,7 +183,8 @@ footer a:hover {
     color: hsl(134, 52%, 46%); 
     text-decoration: none;
 }
-/* prawie wszystko do zmiany */
+
+/* mobile */
 @media only screen and (max-width: 550px){
 
     main {
@@ -216,10 +219,10 @@ footer a:hover {
         margin-block: 1.7rem 0;
     }
     
-    .after-submit img{
+    .after-submit img {
         height: 6.45rem;
     }
-    .points-selected{
+    .points-selected {
         font-size: .95rem;
         padding-inline: .7rem;
         margin-top: 1.5rem;
