--- a/stats-preview-card-component-main/style.css
+++ b/stats-preview-card-component-main/style.css
@@ -3,15 +3,17 @@
     --Very-dark-blue: hsl(233, 47%, 7%);  /*(main background)*/
     --Dark-desaturated-blue: hsl(244, 38%, 16%); /*(card background)*/
     --Soft-violet: hsl(277, 64%, 61%); /* (accent) */
+    --overlay-color: hsl(283, 74%, 45%); /* (accent) */
 
     /* neutral */
     --white: hsl(0, 0%, 100%); /*main heading, stats*/
     --transparent-white: hsla(0, 0%, 100%, 0.75); /*(main paragraph)*/
     --transparent-white2:hsla(0, 0%, 100%, 0.6); /*(stat headings): */
 
-    --f-Inter: 'Inter', sans-serif; /*weights: 400, 700*/
-    --f-Lexend_Deca: 'Lexend Deca', sans-serif; /*weight: 400*/
-
+    --f-Inter: 'Inter', sans-serif; 
+    /*weights: 400, 700*/
+    --f-Lexend_Deca: 'Lexend Deca', sans-serif; 
+    /*weight: 400*/
     font-size: 15px;
 }
 h1, h2, h3, p, body, picture {
@@ -21,145 +23,107 @@ h1, h2, h3, p, body, picture {
 body {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    /* justify-content: center; */
     min-height: 100vh; 
     background-color: var(--Very-dark-blue);
     color: white;
 }
 
-
-main {
+/* #element: wysokosc szerokosc
+    zrezygnowacx z min-width
+*/
+#element {
     display: flex;
-    flex-direction: row-reverse;
-    align-items: flex-start;
-    height: 29.7rem;
-    width: 74rem;
-    border-radius: .5rem;
-    /* overflow: hidden; */
+    flex-direction: row;
     background-color: var(--Dark-desaturated-blue);
+    border-radius: .6rem;
+    overflow: hidden;
+    
+    height: 29.7rem;
+    /* min-width: 13rem; */
+    width: 74rem;
+    /* max-width: 74rem; */
+    
+
+    /* temporary */
     font-family: var(--f-Inter);
-    margin-top: 22rem;
-}
-
-picture {
-    position: relative;
-    height: 100%;
-}
-
-.img {
-    height: 100%;
-}
-
-.color-overlay {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    background-color: hsla(277, 97%, 45%, 0.492);
+    margin-left: .5em;
+    margin-top: .5rem;
 }
 
 .content {
-    text-align: left;
     box-sizing: border-box;
-    margin-block: 4.8rem 4.6rem;
-    margin-inline: 4.75rem 8rem;
+    margin-inline: 4.8em 8em;
+    margin-block: 4.75em 0;
+    width: 39rem;
+    /* max-width: 39rem; */
+    text-align: left;
 }
 
 .content h1 {
-    font-size: 2.4rem;
-    color: var(--white);
-    margin-bottom: 1rem;
+    font-size: 2.4em;
+
 }
 
-
-.content span {
+.header-color-span {
     color: var(--Soft-violet);
 }
 
-.descr {
-    line-height: 1.5rem;
+.description {
     color: var(--transparent-white2);
-    font-size: 1rem;
+    line-height: 1.67em;
+    margin-top: 1.7em;
+
 }
 
-.info {
+.stats {
     display: flex;
     justify-content: space-between;
+    margin-inline: 0 1.9em;
+    margin-top: 4.8em;
+}
 
+.stats h2 {
+    font-size: 1.6em;
+}
+
+.stats p {
+    color: var(--transparent-white2);
+    text-transform: uppercase;
+    font-size: .8em;
+    letter-spacing: .1em;
+    margin-top: .55em;
+}
+
+/* dostosowac tag picture wlasciwie zrozumiec jak to dziala. ustalic wysokosc i szerokosc zeby dziala sie aytomatycznie.
+działa xD */
+.main-img, .img {
+    width: auto;
+    height: 100%;
+    position: relative;
+}
+
+.color-overlay {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--overlay-color);
+    opacity: .5;
 }
 
 
 
-@media (max-width: 700px) {
-    body {
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        min-height: 100vh;
-       
-    }
-
-    main {
-        flex-direction: column;
-        width: 87%;
-        height: auto;
-        margin-top: 1rem;
-        overflow: hidden;
-
-        display: flex;
-   
-    }
-
-    .content {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        height: 100%;
-    }
-
-    .img {
-        width: 100%;
-        height: 100%;
-    }
-
-    .content h1 {
-        font-size: 1.85rem;
-        margin-block: 2.2rem 1rem;
-        margin-inline: 1.2rem;
-    }
+footer {
+    margin-block: 2rem;
+}
 
 
-
-    .descr{ 
-        margin-inline: 1.8rem;
-        line-height: 1.8rem;
-        margin-block: 0rem  1.9rem;
-        color:var(--transparent-white2);
-    }
-
-    .info {
-        height: auto;
-    }
-
-    .info  div {
-        margin-bottom: 1.4rem;
-        color: var(--transparent-white2);
-    }
-
-    .info h3 {
-        font-size: 1.4rem;
-        color: var(--white);
-    }
-
-    .info p {
-        text-transform: uppercase;
-        font-size: .8rem;
-        letter-spacing: .1rem;
-    }
+@media (max-width: 600px) {
 
 }
+
+
 
