--- a/stats-preview-card-component-main/style.css
+++ b/stats-preview-card-component-main/style.css
@@ -23,15 +23,15 @@ h1, h2, h3, p, body, picture {
 body {
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
-    /* justify-content: center; */
+    align-items: center;
+    justify-content: center;
     min-height: 100vh; 
     background-color: var(--Very-dark-blue);
     color: white;
 }
 
 /* #element: wysokosc szerokosc
-    zrezygnowacx z min-width
+    zrezygnowac z min-width?
 */
 #element {
     display: flex;
@@ -48,14 +48,14 @@ body {
 
     /* temporary */
     font-family: var(--f-Inter);
-    margin-left: .5em;
-    margin-top: .5rem;
+    /* margin-left: .5em;
+    margin-top: .5rem; */
 }
 
 .content {
     box-sizing: border-box;
-    margin-inline: 4.8em 8em;
-    margin-block: 4.75em 0;
+   padding-inline: 4.8em 8em;
+   padding-block: 4.75em 0;
     width: 39rem;
     /* max-width: 39rem; */
     text-align: left;
@@ -73,15 +73,15 @@ body {
 .description {
     color: var(--transparent-white2);
     line-height: 1.67em;
-    margin-top: 1.7em;
+    padding-top: 1.7em;
 
 }
 
 .stats {
     display: flex;
     justify-content: space-between;
-    margin-inline: 0 1.9em;
-    margin-top: 4.8em;
+    padding-inline: 0 1.9em;
+    padding-top: 4.8em;
 }
 
 .stats h2 {
@@ -93,7 +93,7 @@ body {
     text-transform: uppercase;
     font-size: .8em;
     letter-spacing: .1em;
-    margin-top: .55em;
+    padding-top: .55em;
 }
 
 /* dostosowac tag picture wlasciwie zrozumiec jak to dziala. ustalic wysokosc i szerokosc zeby dziala sie aytomatycznie.
@@ -122,7 +122,52 @@ footer {
 
 
 @media (max-width: 600px) {
+    main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: auto;
+    }
+    
+    #element {
+        flex-direction: column-reverse;
+        width: 87%;
+        height: auto;
+        /* overflow: visible; */
+        /* align-items: center; */
+    }
 
+    .content {
+        width: 100%;
+        text-align: center;
+        padding-inline: 2em;
+        padding-block: 2.5em 0;
+        height: auto;
+
+    }
+
+    .content h1 {
+        font-size: 1.8rem;
+    }
+
+    .description {
+        padding-top: 0.9rem;
+    }
+
+    .main-img, .img {
+        width: 100%;
+    }
+
+    .stats {
+        flex-direction: column;
+        padding-inline: 0;
+        padding-top: 3em;
+    }
+
+    .stats div {
+        margin-bottom: 2rem;
+    }
 }
 
 
