--- a/kgenerator/css.css
+++ b/kgenerator/css.css
@@ -1,5 +1,6 @@
 body {
     min-height: 100vh;
+    margin: 0;
 
     display: flex;
     justify-content: flex-start;
@@ -19,7 +20,7 @@ h1 {
 h2 {
     /* letter-spacing: .05rem; */
     font-weight: 100;
-    text-align: justify;
+    text-align: center;
     color: rgb(29, 5, 82);
 }
 main {
@@ -43,7 +44,27 @@ button {
     font-size: .9rem;
     font-weight: 600;
     padding: .5rem;
+    margin-top: 20%;
     -webkit-box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.75);
     box-shadow: 0px 3px 11px 2px rgba(0,0,0,0.75)
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        box-sizing: border-box;
+    }
+    main {
+        width: 80vw;
+        max-height: 75vh;
+        overflow-y: scroll;
+        overflow-x: hidden;
+        padding: 0 .5rem;
+        margin-top: 2rem;
+    }
+
+    button {
+        position: absolute;
+        bottom: 4rem;
+    }
+  }
